--- a/Project-6/roommate-app/package.json
+++ b/Project-6/roommate-app/package.json
@@ -7,13 +7,19 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.1",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.3",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
